- detect game resolution - support change view's resolution

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -523,6 +523,12 @@ BEGIN
             MENUITEM "Loop as animated &gif",       ID_VIEW_EXPORTASGIF
             MENUITEM "View as &encoded bitmap",     ID_FILE_EXPORTASBITMAP
         END
+        POPUP "Resolution"
+        BEGIN
+            MENUITEM "320x200",                     ID_RESOLUTION_320X200
+            MENUITEM "640x400",                     ID_RESOLUTION_640X400
+            MENUITEM "640x480",                     ID_RESOLUTION_640X480
+        END
     END
     POPUP "Voca&b"
     BEGIN
@@ -1424,12 +1430,12 @@ BEGIN
     CONTROL         "Check1",IDC_CHECKDELETE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,47,172,23
 END
 
-IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 254
+IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 258
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Version detector"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,233,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,237,50,14
     CONTROL         "SCI 0",IDC_RADIOSCI0,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,20,33,10
     CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
@@ -1447,33 +1453,35 @@ BEGIN
     CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,139,40,10
     CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
-    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,209,53,8
-    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,69,10
-    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,182,49,10
-    DEFPUSHBUTTON   "Reload game",IDOK,167,233,81,14
+    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,188,53,8
+    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,214,69,10
+    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,187,49,10
+    DEFPUSHBUTTON   "Reload game",IDOK,167,237,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
     COMBOBOX        IDC_COMBO2,206,75,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Pic format",IDC_STATIC5,166,77,33,8
-    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,233,87,14
-    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,208,93,10
-    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,221,91,10
+    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,237,87,14
+    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,213,93,10
+    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,200,91,10
     PUSHBUTTON      "View message map",IDC_BUTTON2,7,216,87,14
-    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,195,81,10
-    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,221,68,10
-    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,169,78,10
+    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,200,81,10
+    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,226,68,10
+    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,174,78,10
     COMBOBOX        IDC_COMBO3,206,91,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Audio volume name",IDC_STATIC7,136,93,63,8
     COMBOBOX        IDC_COMBO4,206,123,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO5,206,139,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Audio map format",IDC_STATIC10,141,125,58,8
     RTEXT           "Audio36 map format",IDC_STATIC11,134,141,66,8
-    CONTROL         "Supports message audio",IDC_CHECK12,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,182,89,10
+    CONTROL         "Supports message audio",IDC_CHECK12,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,187,89,10
     COMBOBOX        IDC_COMBO6,206,107,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Main audio map #",IDC_STATIC12,141,109,58,8
-    CONTROL         "Audio is wav format",IDC_CHECK13,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,89,10
+    CONTROL         "Audio is wav format",IDC_CHECK13,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,201,89,10
     COMBOBOX        IDC_COMBO7,206,155,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Message map source",IDC_STATIC13,133,157,68,8
+    COMBOBOX        IDC_COMBO8,206,171,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Default resolution",IDC_STATIC14,142,173,58,8
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
@@ -2468,7 +2476,7 @@ BEGIN
         VERTGUIDE, 110
         VERTGUIDE, 206
         TOPMARGIN, 7
-        BOTTOMMARGIN, 247
+        BOTTOMMARGIN, 251
     END
 
     IDD_DIALOGCHOOSECOLORVGA, DIALOG
@@ -2818,6 +2826,12 @@ BEGIN
 0x656d, 0x7373, 0x6761, 0x2e65, 0x616d, 0x0070, 
     IDC_COMBO7, 0x403, 11, 0
 0x6c61, 0x7274, 0x7365, 0x6d2e, 0x7061, "\000" 
+    IDC_COMBO8, 0x403, 8, 0
+0x3233, 0x7830, 0x3032, 0x0030, 
+    IDC_COMBO8, 0x403, 8, 0
+0x3436, 0x7830, 0x3034, 0x0030, 
+    IDC_COMBO8, 0x403, 8, 0
+0x3436, 0x7830, 0x3834, 0x0030, 
     0
 END
 
