--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -2022,11 +2022,11 @@ BEGIN
     EDITTEXT        IDC_EDITFOLDER,163,7,437,14,ES_AUTOHSCROLL
     LTEXT           "Generated files:",IDC_INSTRUCTIONS,7,234,52,8
     LTEXT           "Doc folder:",IDC_STATIC1,111,9,43,8
-    LISTBOX         IDC_LISTSCRIPTS,7,64,74,162,LBS_SORT | LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_LISTGENERATED,7,246,74,50,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Static",IDC_BROWSER,92,29,508,249,NOT WS_VISIBLE
     EDITTEXT        IDC_EDITCOMMAND,7,41,71,14,ES_AUTOHSCROLL
     LTEXT           "Doc gen command:",IDC_STATIC,7,30,62,8
+    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_SMALLICON | LVS_SORTASCENDING | WS_BORDER | WS_TABSTOP,7,60,74,168
 END
 
 
