- doc gen fixes - proper removal of stage direction for lip-syncing - kernel docs

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -2026,8 +2026,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Documentation Generator"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDCANCEL,550,282,50,14
-    PUSHBUTTON      "&Generate",IDC_GENERATEDOC,7,7,74,14
+    PUSHBUTTON      "Close",IDCANCEL,550,282,50,14
+    DEFPUSHBUTTON   "&Generate",IDC_GENERATEDOC,7,7,74,14
     EDITTEXT        IDC_EDITFOLDER,163,7,437,14,ES_AUTOHSCROLL
     LTEXT           "Generated files:",IDC_INSTRUCTIONS,7,234,52,8
     LTEXT           "Doc folder:",IDC_STATIC1,111,9,43,8
@@ -2036,6 +2036,7 @@ BEGIN
     EDITTEXT        IDC_EDITCOMMAND,7,41,71,14,ES_AUTOHSCROLL
     LTEXT           "Doc gen command:",IDC_STATIC,7,30,62,8
     CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_SMALLICON | LVS_SORTASCENDING | WS_BORDER | WS_TABSTOP,7,60,74,168
+    PUSHBUTTON      "&Kernels",IDC_GENERATEKERNELS,92,282,74,14
 END
 
 
