Missing rst files

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -217,12 +217,14 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
   </ItemGroup>
   <ItemGroup>
     <Image Include="Docs\source\images\AddWord.png" />
+    <Image Include="Docs\source\images\All.png" />
     <Image Include="Docs\source\images\AspectRatio1610.png" />
     <Image Include="Docs\source\images\AspectRatio43.png" />
     <Image Include="Docs\source\images\AspectRatioSCIComp.jpg" />
     <Image Include="Docs\source\images\AudioPreview.png" />
     <Image Include="Docs\source\images\AutoComplete.png" />
     <Image Include="Docs\source\images\Boom.gif" />
+    <Image Include="Docs\source\images\ChoosePri.png" />
     <Image Include="Docs\source\images\ColorShift.png" />
     <Image Include="Docs\source\images\CommandList_Example.png" />
     <Image Include="Docs\source\images\CommandList_GreenLine.png" />
@@ -235,6 +237,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\DayNight.png" />
     <Image Include="Docs\source\images\Debug.png" />
     <Image Include="Docs\source\images\DebugRoom.png" />
+    <Image Include="Docs\source\images\Dither.png" />
     <Image Include="Docs\source\images\DrawingAnimate.png" />
     <Image Include="Docs\source\images\DrawingDither.png" />
     <Image Include="Docs\source\images\DrawingEyedropper.png" />
@@ -281,6 +284,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\KQ6Talker.png" />
     <Image Include="Docs\source\images\LipSyncDialog.png" />
     <Image Include="Docs\source\images\LoadTraceImage.png" />
+    <Image Include="Docs\source\images\Logo.png" />
+    <Image Include="Docs\source\images\LogoComplete.png" />
     <Image Include="Docs\source\images\LogoCycle.gif" />
     <Image Include="Docs\source\images\LogoGradient.png" />
     <Image Include="Docs\source\images\LogoSetColors.jpg" />
@@ -305,12 +310,21 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\PaletteUnderline.PNG" />
     <Image Include="Docs\source\images\PaletteUsedInResource.PNG" />
     <Image Include="Docs\source\images\PasteRect.png" />
+    <Image Include="Docs\source\images\PC2_Base.jpg" />
+    <Image Include="Docs\source\images\PC2_DarkRange.png" />
+    <Image Include="Docs\source\images\PC2_DefineGradient.jpg" />
+    <Image Include="Docs\source\images\PC2_Import.jpg" />
+    <Image Include="Docs\source\images\PC2_ImportOverlay.jpg" />
+    <Image Include="Docs\source\images\PC2_SetRange.jpg" />
+    <Image Include="Docs\source\images\PC2_Visualization.png" />
+    <Image Include="Docs\source\images\PC2_ZoomIn.png" />
     <Image Include="Docs\source\images\PhonemeEditor.png" />
     <Image Include="Docs\source\images\PicEditor.jpg" />
     <Image Include="Docs\source\images\PicHelper.jpg" />
     <Image Include="Docs\source\images\PolygonTool.png" />
     <Image Include="Docs\source\images\PriBands.jpg" />
     <Image Include="Docs\source\images\PriLineTool.png" />
+    <Image Include="Docs\source\images\PriScreen.png" />
     <Image Include="Docs\source\images\QuickLinks.png" />
     <Image Include="Docs\source\images\Resize_Example.png" />
     <Image Include="Docs\source\images\RightClickMenu.png" />
@@ -335,6 +349,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\ViewLoop.png" />
     <Image Include="Docs\source\images\ViewLoopAnimated.gif" />
     <Image Include="Docs\source\images\ViewPalettes.png" />
+    <Image Include="Docs\source\images\VocabEditor.jpg" />
     <Image Include="Docs\source\images\Vocab_Example.png" />
     <Image Include="Docs\source\images\Vocab_TypeExample.png" />
     <Image Include="Docs\source\images\VPC.png" />
@@ -355,11 +370,46 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\aspectratio.rst" />
     <None Include="Docs\source\audio.rst" />
     <None Include="Docs\source\audiofiles.rst" />
+    <None Include="Docs\source\classlibrary.rst" />
+    <None Include="Docs\source\Compiler\arithmetic.rst" />
+    <None Include="Docs\source\Compiler\asm.rst" />
+    <None Include="Docs\source\Compiler\assignment.rst" />
+    <None Include="Docs\source\Compiler\bitwise.rst" />
+    <None Include="Docs\source\Compiler\break.rst" />
+    <None Include="Docs\source\Compiler\classes.rst" />
+    <None Include="Docs\source\Compiler\classheader.rst" />
+    <None Include="Docs\source\Compiler\codeblock.rst" />
+    <None Include="Docs\source\Compiler\comment.rst" />
+    <None Include="Docs\source\Compiler\conditionalexpressions.rst" />
+    <None Include="Docs\source\Compiler\define.rst" />
+    <None Include="Docs\source\Compiler\do.rst" />
+    <None Include="Docs\source\Compiler\for.rst" />
+    <None Include="Docs\source\Compiler\if.rst" />
+    <None Include="Docs\source\Compiler\include.rst" />
+    <None Include="Docs\source\Compiler\objectfiles.rst" />
+    <None Include="Docs\source\Compiler\otheroperators.rst" />
+    <None Include="Docs\source\Compiler\procedures.rst" />
+    <None Include="Docs\source\Compiler\properties.rst" />
+    <None Include="Docs\source\Compiler\relationaloperators.rst" />
+    <None Include="Docs\source\Compiler\rest.rst" />
+    <None Include="Docs\source\Compiler\return.rst" />
+    <None Include="Docs\source\Compiler\saids.rst" />
+    <None Include="Docs\source\Compiler\selectors.rst" />
+    <None Include="Docs\source\Compiler\sendselfsuper.rst" />
+    <None Include="Docs\source\Compiler\strings.rst" />
+    <None Include="Docs\source\Compiler\switch.rst" />
+    <None Include="Docs\source\Compiler\synonyms.rst" />
+    <None Include="Docs\source\Compiler\use.rst" />
+    <None Include="Docs\source\Compiler\variables.rst" />
+    <None Include="Docs\source\Compiler\variabletypes.rst" />
+    <None Include="Docs\source\Compiler\version.rst" />
+    <None Include="Docs\source\Compiler\while.rst" />
     <None Include="Docs\source\conf.py" />
     <None Include="Docs\source\cursors.rst" />
     <None Include="Docs\source\debugging.rst" />
     <None Include="Docs\source\decompiler.rst" />
     <None Include="Docs\source\fonts.rst" />
+    <None Include="Docs\source\gameversion.rst" />
     <None Include="Docs\source\includes\standard.rst" />
     <None Include="Docs\source\index.rst" />
     <None Include="Docs\source\intro.rst" />
@@ -367,6 +417,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\messageaudio.rst" />
     <None Include="Docs\source\messages.rst" />
     <None Include="Docs\source\outputpane.rst" />
+    <None Include="Docs\source\overview.rst" />
     <None Include="Docs\source\palettecycling.rst" />
     <None Include="Docs\source\palettes.rst" />
     <None Include="Docs\source\pics.rst" />
@@ -374,6 +425,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\preferences.rst" />
     <None Include="Docs\source\rastertools.rst" />
     <None Include="Docs\source\recording.rst" />
+    <None Include="Docs\source\sci_compiler.rst" />
     <None Include="Docs\source\scripts.rst" />
     <None Include="Docs\source\selectionandresize.rst" />
     <None Include="Docs\source\sounds.rst" />
